--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -68,7 +68,7 @@
     <string name="err_filename_missing">Fehlender Dateiname für Datenbankexport</string>
     <string name="err_database_not_found">Datenbank nicht gefunden</string>
     <string name="app_descripton">Berechnet Kohlenhydrate, verlängerte Kohlenhydrate (auch bekannt als eCarbs oder Fake Carbs) und die entsprechende Absorptionszeit für ein Essen oder ganze Mahlzeiten.</string>
-    <string name="app_documentation_link">Dokumentation auf rueth.info</string>
+    <string name="app_documentation_link">Dokumentation und Datenschutz auf rueth.info</string>
     <string name="about_dialog">Über</string>
     <string name="err_intentnull">Intent darf nicht null sein</string>
     <string name="dbimport_dialog_mode_title">Datenimport</string>
